feat: make ipfs config dir an empty volume

--- a/ipfs-testbed/templates/deployment.yaml
+++ b/ipfs-testbed/templates/deployment.yaml
@@ -76,11 +76,16 @@ spec:
             {{- toYaml .Values.ipfs.env | nindent 12 }}
           resources:
             {{- toYaml .Values.ipfs.resources | nindent 12 }}
+          volumeMounts:
+            - name: ipfs-config
+              mountPath: /root/.jsipfs
       volumes:
         - name: toxiproxy-config
           configMap:
             name: {{ include "ipfs-testbed.fullname" . }}-toxiproxy-config
             defaultMode: 0444
+        - name: ipfs-config
+          emptyDir: {}
     {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
