chore: update tar

--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -3,11 +3,11 @@ entries:
   ipfs-testbed:
   - apiVersion: v1
     appVersion: "1.0"
-    created: 2019-03-06T01:10:20.189021531Z
+    created: 2019-10-23T23:53:22.609078234+01:00
     description: A Helm chart used to create an IPFS testbed with Toxiproxy
-    digest: 0d5df71528f08cea02031a3696a40c934c1866f19454f5d995636e8fe8938b7b
+    digest: 00254c2af94427e5eb6402343c1bdb78a8a4186b2237f9fb8f0a04ce4b9b3b89
     name: ipfs-testbed
     urls:
     - https://jgantunes.github.io/helm-charts/ipfs-testbed-0.1.0.tgz
     version: 0.1.0
-generated: 2019-03-06T01:10:20.188642919Z
+generated: 2019-10-23T23:53:22.608685702+01:00
